# ChangeLog for x11-libs/libXext
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.99 2011/02/14 18:45:28 xarthisius Exp $

  14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> libXext-1.2.0.ebuild:
  ppc stable wrt #344827, #354237

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> libXext-1.2.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #344827

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> libXext-1.2.0.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> libXext-1.2.0.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org> libXext-1.2.0.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> libXext-1.2.0.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> libXext-1.2.0.ebuild:
  ppc64 stable wrt #344827

  20 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -libXext-1.1.2-r1.ebuild:
  old

*libXext-1.2.0 (28 Oct 2010)

  28 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +libXext-1.2.0.ebuild:
  Version bump.

  21 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -libXext-1.1.1.ebuild:
  old

  21 Oct 2010; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking libXext-1.1.2 ppc stable for bug 239063

  28 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> libXext-1.1.2.ebuild:
  ppc64 stable wrt #327777

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> libXext-1.1.2.ebuild:
  ia64/s390/sh/sparc stable wrt #327777

  12 Sep 2010; Tobias Klausmann <klausman@gentoo.org> libXext-1.1.2.ebuild:
  Stable on alpha, bug #327777

  10 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -libXext-1.0.5.ebuild:
  remove old

*libXext-1.1.2-r1 (05 Sep 2010)

  05 Sep 2010; Fabian Groffen <grobian@gentoo.org> +libXext-1.1.2-r1.ebuild,
  +files/libXext-1.1.2-xhidden.patch:
  Add patch for bug #335619, fixes compilation/linking problem due to