@@ -1,0 +1,25 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXext/Attic/libXext-1.3.0.ebuild,v 1.1 2011/05/07 15:02:44 scarabeus Exp $
+
+EAPI=4
+
+XORG_DOC=doc
+inherit xorg-2
+
+DESCRIPTION="X.Org Xext library"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-fbsd ~x64-freebsd ~x86-freebsd ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
+IUSE=""
+
+RDEPEND=">=x11-libs/libX11-1.2
+	>=x11-proto/xextproto-7.1.99"
+DEPEND="${RDEPEND}"
+
+pkg_setup() {
+	XORG_CONFIGURE_OPTIONS=(
+		$(use_enable doc specs)
+		$(use_with doc xmlto)
+		--without-fop
+	)
+}
