@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libXext
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.99 2011/02/14 18:45:28 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.100 2011/05/07 15:02:44 scarabeus Exp $
+
+*libXext-1.3.0 (07 May 2011)
+
+  07 May 2011; Tomáš Chvátal <scarabeus@gentoo.org> +libXext-1.3.0.ebuild:
+  Version bump to latest.
 
   14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> libXext-1.2.0.ebuild:
   ppc stable wrt #344827, #354237
